[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim-ros2-bridge"
version = "0.1.0"
description = "ROS2 bridge for AlpaSim autonomous driving simulator"
requires-python = ">=3.11,<3.13"
dependencies = [
  "grpcio",
  "protobuf>=4.0.0,<5.0.0",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["alpasim_ros2_bridge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Integration tests (Layer 3)",
]
